# ADI_Converge_Analysis

./: .gitignore  CMakeLists.txt  FE  Makefile  OS-ADI  README.md  SSI-ADI  auxfuncs.h  build.sh  convergence  convergence.cu  convergence_analysis_script.py  cuda_functions.h  execution_script.py  functions.py  include.h  main.cu  methods.h  notes.txt  plot.py  ricardo-result.txt  ricardo.py  simulation_errors.py  slopes_script.py  solution.py  test.txt  test_cuda.cu
configs/: example_config.ini  test.ini  test_serial.ini
include/: auxfuncs.h  config_parser.h  constants.h  core_definitions.h  cpu_functions.h  cpu_functions.old  gpu_functions.h  include.old  legacy.old  logger.h  monodomain.h  numerical_methods.h  problem_definitions.h  save_functions.h
include/cell_models/: afhn.h  mv.h  tt2.h
outputs/afhn_spiral/: simulation_config.ini  simulation_infos.txt
outputs/test/: simulation_config.ini  simulation_infos.txt
outputs/test_serial/: simulation_config.ini  simulation_infos.txt
reference_solutions/double/CABLEEQ/AFHN/: last_0.00010_0.00050.txt  last_0.00050_0.00050.txt
reference_solutions/double/CABLEEQ/TT2/: lastNa_i_0.00050_0.00050.txt  lastV_0.00050_0.00050.txt  lastX_r1_0.00050_0.00050.txt  lastX_r2_0.00050_0.00050.txt  last_0.00010_0.00050.txt  last_0.00050_0.00050.txt  lastf2_0.00050_0.00050.txt  lastfCaSS_0.00050_0.00050.txt  lastj_0.00050_0.00050.txt  lastr_0.00050_0.00050.txt
reference_solutions/double/MONODOMAIN/AFHN/: infos.txt  last_0.00010_0.00500.txt  last_0.00010_0.01000.txt  last_0.00050_0.01000.txt  lastframeV.txt  lastframeW.txt
reference_solutions/double/MONODOMAIN/MV/: infos.txt  infos333.txt
reference_solutions/double/MONODOMAIN/TT2/: last_0.00010_0.00500.txt
reference_solutions/float/AFHN/: infos_0.0005_0.0005.txt
restore_state/double/CABLEEQ/AFHN/: lastV_0.00010_0.00050.txt  lastW_0.00010_0.00050.txt
restore_state/double/CABLEEQ/TT2/: lastCa_SR_0.00010_0.00050.txt  lastCa_SR_0.00050_0.01000.txt  lastCa_SS_0.00010_0.00050.txt  lastCa_SS_0.00050_0.01000.txt  lastCa_i_0.00010_0.00050.txt  lastCa_i_0.00050_0.01000.txt  lastK_i_0.00010_0.00050.txt  lastK_i_0.00050_0.01000.txt  lastNa_i_0.00010_0.00050.txt  lastNa_i_0.00050_0.01000.txt  lastR_prime_0.00010_0.00050.txt  lastR_prime_0.00050_0.01000.txt  lastV_0.00010_0.00050.txt  lastV_0.00050_0.01000.txt  lastX_r1_0.00010_0.00050.txt  lastX_r1_0.00050_0.01000.txt  lastX_r2_0.00010_0.00050.txt  lastX_r2_0.00050_0.01000.txt  lastX_s_0.00010_0.00050.txt  lastX_s_0.00050_0.01000.txt  lastd_0.00010_0.00050.txt  lastd_0.00050_0.01000.txt  lastf2_0.00010_0.00050.txt  lastf2_0.00050_0.01000.txt  lastfCaSS_0.00010_0.00050.txt  lastfCaSS_0.00050_0.01000.txt  lastf_0.00010_0.00050.txt  lastf_0.00050_0.01000.txt  lasth_0.00010_0.00050.txt  lasth_0.00050_0.01000.txt  lastj_0.00010_0.00050.txt  lastj_0.00050_0.01000.txt  lastm_0.00010_0.00050.txt  lastm_0.00050_0.01000.txt  lastr_0.00010_0.00050.txt  lastr_0.00050_0.01000.txt  lasts_0.00010_0.00050.txt  lasts_0.00050_0.01000.txt
restore_state/double/MONODOMAIN/AFHN/: infos.txt  lastV_0.00010_0.00500.txt  lastW_0.00010_0.00500.txt  lastframeV.txt  lastframeW.txt
restore_state/double/MONODOMAIN/AFHN_GPU/: lastV_0.00010_0.00500.txt  lastW_0.00010_0.00500.txt  leia.txt
restore_state/double/MONODOMAIN/MV/: infos.txt  infos478.txt
restore_state/double/MONODOMAIN/MV_20um/: infos.txt
restore_state/double/MONODOMAIN/TT2/: lastCa_SR_0.00010_0.00500.txt  lastCa_SS_0.00010_0.00500.txt  lastCa_i_0.00010_0.00500.txt  lastK_i_0.00010_0.00500.txt  lastNa_i_0.00010_0.00500.txt  lastR_prime_0.00010_0.00500.txt  lastV_0.00010_0.00500.txt  lastX_r1_0.00010_0.00500.txt  lastX_r2_0.00010_0.00500.txt  lastX_s_0.00010_0.00500.txt  lastd_0.00010_0.00500.txt  lastf2_0.00010_0.00500.txt  lastfCaSS_0.00010_0.00500.txt  lastf_0.00010_0.00500.txt  lasth_0.00010_0.00500.txt  lastj_0.00010_0.00500.txt  lastm_0.00010_0.00500.txt  lastr_0.00010_0.00500.txt  lasts_0.00010_0.00500.txt
ricardo_study_files/: ricardo-exact.txt
simulation-files/double/AFHN/ADI/: errors-0.00625000-0.012500.txt  errors-0.01250000-0.025000.txt  errors-0.02500000-0.050000.txt  errors-0.06250000-0.012500.txt  errors-0.06250000-1.250000.txt  errors-0.12500000-0.025000.txt  errors-0.25000000-0.050000.txt  exact-0.02500000-0.050000.txt  exact-0.06250000-1.250000.txt  exact-0.12500000-0.025000.txt  infos-0.00625000-0.012500.txt  infos-0.01250000-0.025000.txt  infos-0.02500000-0.050000.txt  infos-0.06250000-0.012500.txt  infos-0.06250000-1.250000.txt  infos-0.12500000-0.025000.txt  infos-0.25000000-0.050000.txt  last-0.00625000-0.012500.txt  last-0.01250000-0.025000.txt  last-0.02500000-0.050000.txt  last-0.06250000-0.012500.txt  last-0.06250000-1.250000.txt  (+2 more)
simulation-files/simulation-analysis/: analysis_0.01.txt  analysis_0.05.txt  analysis_0.1.txt  analysis_0.5.txt  analysis_1.txt  analysis_5.txt  analysis_gpu_0.5.txt
simulation_files/simulation_analysis/: analysis_double_GPU_MONOAFHN_alpha0.5.txt  analysis_double_SERIAL_MONOAFHN_alpha0.5.txt
simulation_files/simulation_analysis/SSI-ADI/: error_analysis_float_GPU_MONOAFHN.txt
simulation_files/simulation_analysis/theta-ADI/: error_analysis_float_GPU_MONOAFHN.txt
src/: auxfuncs.c  auxfuncs.h  config_parser.c  cpu_functions.c  cpu_functions.h  cpu_methods.c  cpu_methods.h  functions.h  gpu_functions.cu  gpu_functions.h  gpu_methods.cu  gpu_methods.h  include.h  logger.c  logger.cu  main.c  methods.h  monodomain.c  monodomain.cu  omp_functions.c  omp_functions.todo  omp_methods.h  openmp_methods.h  save_functions.c  simulation_config.h
src/cell_models/: cell_models.c  cell_models.cu  cell_models.h  headers.h  simulation_helpers.h
src/cell_models/afhn/: afhn.c  afhn.cu  afhn.h
src/cell_models/minimal_ventricular/: mv.c  mv.cu  mv.h
src/cell_models/tt2/: tt2.c  tt2.cu  tt2.h
src/numerical_methods/: numerical_methods.c  numerical_methods.h  numerical_methods_helpers.h  ssiadi.c
src/numerical_methods/fe/: fe.c  fe.cu
src/numerical_methods/osadi/: osadi.c  osadi.cu
src/numerical_methods/ssiadi/: ssiadi.c  ssiadi.cu
(+1157 files in other folders)
